# ingenierie_ia_exercices

./: .gitignore
tp01_prototypage_naf_n_rome/: .gitignore  README.md
tp01_prototypage_naf_n_rome/jour01_naf_rome/: .gitignore  README.md
tp01_prototypage_naf_n_rome/jour01_ux_ui/: EVALUATION_jour1_ux_ui.md  README.md
tp01_prototypage_naf_n_rome/jour01_ux_ui/01excalidraw/: wireframe_naf_rome.excalidraw
tp01_prototypage_naf_n_rome/jour01_ux_ui/03frontend/: .npmrc  index.html  package-lock.json  package.json  run.sh  tailwind.config.js
tp01_prototypage_naf_n_rome/jour02_fast_api/: EVALUATION_jour2fastapi_ux_ui_rgaa_wave.md  README.md  pyproject.toml  run.sh  stop.sh
tp01_prototypage_naf_n_rome/jour02_fast_api/app/: main.py
tp01_prototypage_naf_n_rome/jour02_fast_api/data/: rome_with_naf__thenlper_gte-large.csv
tp01_prototypage_naf_n_rome/jour03_docker_ci_cd/: .dockerignore  .pre-commit-config.yaml  Dockerfile  EVALUATION_jour3_docker_ci_cd.md  README.md  docker-compose.yml  pyproject.toml
tp01_prototypage_naf_n_rome/jour03_docker_ci_cd/.github/workflows/: ci.yml
tp01_prototypage_naf_n_rome/jour03_docker_ci_cd/app/: config.py  main.py  models.py
tp01_prototypage_naf_n_rome/jour03_docker_ci_cd/app/routers/: health.py  mapping.py
tp01_prototypage_naf_n_rome/jour03_docker_ci_cd/app/services/: matcher.py
tp01_prototypage_naf_n_rome/jour03_docker_ci_cd/data/: naf_codes_001_desc.csv  sample_naf_rome.csv
tp01_prototypage_naf_n_rome/jour03_docker_ci_cd/tests/: conftest.py  test_health.py  test_mapping.py
(+26 files in other folders)
